# GUI-Qt

./: CMakeLists.txt  QtGUIv3.pro  README.md  SimplePlayer.cpp  SimplePlayer.h  SimplePlayer.ui  addchannels.cpp  addchannels.h  globalheader.h  logger.cpp  logger.h  main.cpp  peer.cpp  peer.h  peerthread.cpp  peerthread.h  sink.cpp  sink.h
